Add progress report

--- a/khmer_parallel_metrics.ipynb
+++ b/khmer_parallel_metrics.ipynb
@@ -1171,6 +1171,54 @@
      "prompt_number": 62
     },
     {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%capture output\n",
+      "%timeit -r 100 -n 1 !./test_async_diginorm.py ../khmer/tests/test-data/test-reads.fa 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "vals = []\n",
+      "import re\n",
+      "p = re.compile('kept \\d+')\n",
+      "for match in p.finditer(output.stdout):\n",
+      "    s, e = match.span()\n",
+      "    vals.append( int(output.stdout[s:e].split()[1]) )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "max(vals)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 39,
+       "text": [
+        "24992"
+       ]
+      }
+     ],
+     "prompt_number": 39
+    },
+    {
      "cell_type": "markdown",
      "metadata": {
       "slideshow": {
